// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component Render itself correctly 1`] = `
<label
  className=""
  htmlFor="foo"
>
  bar
</label>
`;

exports[`Label component Use className prop 1`] = `
<label
  className="someClass"
  htmlFor="foo"
>
  bar
</label>
`;
